added back button on results page

--- a/public/getRate.html
+++ b/public/getRate.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <h1>Get Postage Rate</h1>
     <div>
         <form action="/getRate" method="GET">
             <label for="mailType">Select a type of mail:</label>
